--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "http://RupertXXX.github.io/testTask",
+  "home": "https://rupertxxx.github.io/testTask/",
   "name": "form",
   "version": "0.1.0",
   "private": true,
