--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "home": "https://rupertxxx.github.io/testTask/",
   "name": "form",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rupertxxx.github.io/testTask/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
